# turengcli

./: .gitignore  README.MD  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
turengcli/: __main__.py  cli.py
